Finding an overflow  issue with carousel images

--- a/main.css
+++ b/main.css
@@ -477,10 +477,6 @@ footer{
         margin-bottom: 60px;
     }
 
-    /* .client-profile .subtext-bio:nth-child(1){
-        background-color: black;
-    } */
-
     /* testing the order property to manipulate what comes first */
 
     .egg-bg {
